Feat: udistrital/sga_documentacion#53 Creacion de codigos
Creacion de la función que asigna los codigos segun el sort seleccionado
